# powergym-ag-system

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  API_TESTING_GUIDE.md  README.md  TESTING_README.md  pyproject.toml  pytest.ini  seed.py  test_runner.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/database/: supabase_client.py
backend/app/models/: __init__.py  attendance.py  auth.py  biometric.py  customer.py  payment.py  plan.py  subscription.py
backend/app/routers/: attendances.py  auth.py  biometrics.py  customers.py  payments.py  plans.py  protected.py  subscriptions.py
backend/tests/: conftest.py  test_auth.py  test_biometrics.py  test_customers.py
frontend/: .gitignore  README.md  index.html  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/components/biometrics/: BiometricDetailModal.tsx  BiometricList.tsx  BiometricRegistrationModal.tsx
frontend/src/components/customers/: CustomerForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useNavigate.ts  useToast.ts
frontend/src/pages/: CustomerDetail.tsx  CustomerEdit.tsx  CustomerRegistration.tsx  Customers.tsx  Dashboard.tsx  Login.tsx
frontend/src/services/: api.ts
frontend/src/types/: biometric.ts  customer.ts
init-scripts/: 01_types.sql  02_tables.sql  03_indexes.sql  04_sample_data.sql
supabase/migrations/: 20251001122827_002_customers_biometrics_module.sql  20251001132203_001_initial_schema.sql
(+7 files in other folders)
